2019-02-14  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Plug some memory leaks

	* src/balsa-mime-widget.[ch]: No need for a 'finalize' method
	* src/balsa-message.c: Unref the BalsaMimeWidget
	* src/balsa-app.c: Unref the POP3 mailboxes and free the list
	* libbalsa/mailbox_pop3.c: Do not leak the filter-cmd
	* libbalsa/address-book-rubrica.c: Do not leak the completion

2019-02-04  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* meson_options.txt: make 'autocrypt' a boolean option, default
	false;
	* meson.build: rename 'autocryptcfg' to 'autocrypt', since it is
	now boolean.

2019-02-03  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Restore running the address book editor

	* src/meson.build: build the editor with the correct name:
	"balsa-ab", not "balsa_ab";
	* ui/balsa-ab.gresource.xml: use the correct prefix:
	"/org/desktop/BalsaAb", not "/org/desktop/Balsa".

2018-01-30  Albrecht Dreß  <albrecht.dress@arcor.de>

	LDAP address book: use all email attributes

	* libbalsa_address_book_ldap_get_address(): assign the GList
	  of all mail attribute strings to LibBalsaAddress instead of the
	  first one only;
	* lbabl_get_internet_address(): append separate InternetAddress
	  to a GList instead on returning the first one only.

2018-01-24  Albrecht Dreß  <albrecht.dress@arcor.de>

	* libbalsa/html.c (lbh_web_process_terminated_cb): new signal in
	  webkit version 2.20;
	  (libbalsa_html_new): do not auto-load images if any are
	  external (that is, not cid: data)
2019-01-22  Peter Bloomfield  <pbloomfield@bellsouth.net>

	More menu shuffling

	* ui/main-window.ui:
	  move "File → New → Message" to "Message → New…";
	  move  "Mailbox → Close" to the foot of the "Mailbox" menu, and
	  group "Remove Duplicates" and "Expunge Deleted Messages"
	  immediately above it;
	  move "Message → Next Message" and three friends to a new
	  "Go" top-level menu.

2019-01-21  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* ui/main-window.ui: Shuffle some menu items;